--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,29 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "compleer"
-version = "0.1.0"
+version = "2025.0.1"
 authors = [{ name = "Bertram Aakjær", email = "work.aakjaer@gmail.com" }]
 description = "A cross application text completion tool."
 readme = "README.md"
+license = {file = "LICENSE"}
 requires-python = ">=3.13"
 dependencies = []
+
+[project.scripts]
+compleer = "src.compleer.main:main"
+
+[project.urls]
+Homepage = "https://aakjaer.site"
+
+
+[tool.ruff]
+line-length = 88
+target-version = "py313"
+
+[tool.ruff.lint]
+select = ["E", "F", "I"]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.10",
+]
